Add WidgetLCAUtil#preserveProperty method too - bug 351945: Migrate widget LCAs to write JSON responses https://bugs.eclipse.org/bugs/show_bug.cgi?id=351945